<resources>
    <string name="app_name">demo1</string>
    <string name="calculate_button">CALCULATE</string>
    <string name="cost_of_service">cost of service</string>
    <string name="amazing_21">AMAZING(21%)</string>
    <string name="good_16">GOOD(16%)</string>
    <string name="ok_10">OK(10%)</string>
    <string name="round_up_tip">round up of the tip?</string>
    <string name="how_was_the_service">How was the service?</string>
</resources>